fix the problem with dialogue z-index

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -11,7 +11,7 @@
   // background-position: center;
   padding: 100px 0;
 
-  z-index: -1000;
+ // z-index: -1000;
 }
 
 
